# opengl-tests

./: .gitignore  LICENSE  Main.hs.copy  cabal.project  opengl-tests.aux  opengl-tests.cabal  opengl-tests.hp  opengl-tests.prof
app/: Main.hs
shaders/: shader.frag  shader.vert
shaders/default/: default.frag  default.vert
shaders/object/: object.frag  object.vert
