cabal-version:      3.0
name:               opengl-tests
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             S3NP41-v
maintainer:         s3np41v@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable opengl-tests
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base  >=4.19
      , OpenGL
      , bytestring
      , text
      , vector
      , sdl2
      , JuicyPixels
      , linear
      , linear-opengl
      , filepath
      , directory

    hs-source-dirs:   app
    default-language: GHC2021
